# Preprocess

./: .gitignore  CMakeLists.txt  main.cpp
INPUT/: cubic.fvbnd  cubic.grd  cubic.inp  setup.txt
build-safe-cout/: CMakeCache.txt  MAIN  Makefile  cmake_install.cmake
include/: 0_ARRAY_DEFINE.h  0_CONST_DEFINE.h  MPCNS_Pre_CubicGridGenerator.h  MPCNS_Pre_Data.h  MPCNS_Pre_Datatrans.h  MPCNS_Pre_Group.h  MPCNS_Pre_IOinfo.h  MPCNS_Pre_InputRefinement.h  MPCNS_Pre_Parameter.h  MPCNS_Pre_Split.h  MPCNS_Pre_TopologyReport.h  Pre_ACANSOutput.h  Pre_MPCNSOutput.h
include/core/: 0_CONST_DEFINE.h  MPCNS_Pre_Data.h  MPCNS_Pre_Parameter.h
include/io/: MPCNS_Pre_IOinfo.h  Pre_ACANSOutput.h  Pre_MPCNSOutput.h
include/partition/: MPCNS_Pre_Datatrans.h  MPCNS_Pre_DecOrientationTest.h  MPCNS_Pre_Group.h  MPCNS_Pre_Split.h
include/report/: MPCNS_Pre_TopologyReport.h
include/workflow/: MPCNS_Pre_App.h  MPCNS_Pre_CubicGridGenerator.h  MPCNS_Pre_CubicSphereGridGenerator.h  MPCNS_Pre_InputRefinement.h
src/: MPCNS_Pre_App.cpp  MPCNS_Pre_CubicGridGenerator.cpp  MPCNS_Pre_Data.cpp  MPCNS_Pre_Datatrans.cpp  MPCNS_Pre_Group.cpp  MPCNS_Pre_IOinfo.cpp  MPCNS_Pre_InputRefinement.cpp  MPCNS_Pre_Parameter.cpp  MPCNS_Pre_Split.cpp  MPCNS_Pre_TopologyReport.cpp  Pre_ACANSOutput.cpp  Pre_MPCNSOutput.cpp
src/core/: MPCNS_Pre_Data.cpp  MPCNS_Pre_Parameter.cpp
src/io/: MPCNS_Pre_IOinfo.cpp  Pre_ACANSOutput.cpp  Pre_MPCNSOutput.cpp
src/partition/: MPCNS_Pre_Datatrans.cpp  MPCNS_Pre_DecOrientationTest.cpp  MPCNS_Pre_Group.cpp  MPCNS_Pre_Split.cpp
src/report/: MPCNS_Pre_TopologyReport.cpp
src/workflow/: MPCNS_Pre_App.cpp  MPCNS_Pre_CubicGridGenerator.cpp  MPCNS_Pre_CubicSphereGridGenerator.cpp  MPCNS_Pre_InputRefinement.cpp
